crates/pixi-build-mojo/src/snapshots/pixi_build_mojo__tests__compiler_is_not_added_if_compiler_is_already_present.snap
---
source: crates/pixi-build-mojo/src/main.rs
expression: generated_recipe.recipe
---
context: {}
package:
  name: foobar
  version: 0.1.0
source: []
build:
  number: ~
  script: "[ ... script ... ]"
requirements:
  build:
    - mojo-compiler
  host: []
  run:
    - boltons
  run_constraints: []
tests: []
about:
  homepage: ~
  license: ~
  summary: ~
  description: ~
  documentation: ~
  repository: ~
extra: ~
