crates/pixi-build-mojo/src/snapshots/pixi_build_mojo__tests__max_is_not_added_if_max_is_already_present.snap
---
source: crates/pixi-build-mojo/src/main.rs
expression: generated_recipe.recipe
---
context: {}
package:
  name: foobar
  version: 0.1.0
source: []
build:
  number: ~
  script: "[ ... script ... ]"
requirements:
  build:
    - max *
  host: []
  run:
    - boltons *
  run_constraints: []
tests: []
about: ~
extra: ~
